--- a/source/sass/global/container.scss
+++ b/source/sass/global/container.scss
@@ -1,18 +1,16 @@
 .container {
   width: 100%;
-  max-width: 1920px;
   margin: 0 auto;
-  padding: 0 40px;
 
-  @include vp-1439 {
-    padding: 0 32px;
+  @media (min-width: $mobile-width-only) {
+    max-width: 84%;
   }
 
-  @include vp-1023 {
-    padding: 0 24px;
+  @media (min-width: $tablet-width) {
+    max-width: 87%;
   }
 
-  @include vp-767 {
-    padding: 0 16px;
+  @media (min-width: $desktop-width) {
+    max-width: 64%;
   }
 }
