--- a/source/sass/global/reboot.scss
+++ b/source/sass/global/reboot.scss
@@ -12,13 +12,6 @@ body {
 }
 
 html {
-  font-style: normal;
-  font-weight: 400;
-  font-size: $fz-default;
-  line-height: 24px;
-  font-family: $ff-placeholder;
-  color: $color-default-black;
-
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   // оптимизация выравнивания шрифта относительно центра строки
@@ -30,19 +23,37 @@ html {
 body {
   width: 100%;
   height: 100%;
+  margin: 0 auto;
+  font-family: "PT Mono", "Courier", monospace;
+  font-style: normal;
+  font-weight: 400;
+  background-color: $color-whisper2;
+  color: $color-default-white;
+}
 
-  background-color: $color-default-white;
+.wrapper {
+  @media (min-width: $desktop-width) {
+    max-width: 1920px;
+  }
+
+  @media (max-width: $tablet-width) {
+    max-width: 770px;
+  }
+
+  @media (max-width: $mobile-width-only) {
+    max-width: 320px;
+  }
 }
 
 a {
-  color: $color-default-black;
   text-decoration: none;
+  color: $color-default-white;
 }
 
 img,
 video {
   display: block;
-  max-width: 100%;
+  // max-width: 100%;
   height: auto;
 }
 
@@ -82,6 +93,7 @@ select {
 
 // ie11 X removal
 input {
+
   &::-ms-clear,
   &::-ms-reveal {
     display: none;
