--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -2,14 +2,11 @@
 // ---------------------------------
 
 @import "vendor/normalize";
-// Swiper 7.4.1
-// @import "vendor/swiper";
 
 // Global
 // ---------------------------------
 
 @import "variables";
-@import "mixins";
 @import "global/fonts";
 @import "global/reboot";
 @import "global/utils";
@@ -18,8 +15,26 @@
 // Blocks
 // ---------------------------------
 
-@import "blocks/btn";
+@import "blocks/header";
+@import "blocks/intro";
+@import "blocks/advantages";
+@import "blocks/about-company";
+@import "blocks/catalog";
+
+
+
+@import "blocks/footer";
+@import "blocks/logos";
+@import "blocks/social";
+@import "blocks/nav";
+@import "blocks/address";
+
+
 @import "blocks/modal";
+
+
+
+
 
 // ---------------------------------
 
