--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -1,3 +1,10 @@
+// Screen sizes
+// ---------------------------------
+
+$desktop-width: 1920px;
+$tablet-width: 770px;
+$mobile-width-only: 320px;
+
 // Colors
 // ---------------------------------
 
@@ -10,12 +17,22 @@ $color-transparent:                 rgba(255, 255, 255, 0);
 // Project palette
 // для нейминга цветов используем https://www.htmlcsscolor.com/hex/334482
 
-$color-neon-blue:                   #2c39f2;
-$color-torch-red:                   #ff1553;
+$color-black-pearl1:                #041827;
+$color-black-pearl2:                #041427;
+$color-deepsky-blue1:               #00b2ff;
+$color-deepsky-blue2:               #00b3ff;
+$color-alice-blue1:                 #f2f5f6;
+$color-alice-blue2:                 #f8fdff;
+$color-alice-blue3:                 #f2f5f7;
+$color-whisper:                     #ebebeb;
+$color-whisper2:                    #e5e5e5;
+$color-black-pearl-opacity:         fade-out($color-black-pearl1, 0.5);
+
 
 // Gradient
 
-$black-to-right:                    linear-gradient(90deg, rgba(0, 0, 0, 0.75) 0%, rgba(0, 0, 0, 0) 75%);
+$black-to-bottom:                    linear-gradient(180deg, #041827 84.9%, rgba(4, 24, 39, 0) 100%);
+$gradient-intro:                     linear-gradient(180deg, rgba(25, 32, 36, 0.7) 71.72%, rgba(25, 32, 36, 0) 100%);
 
 // Typography
 // ---------------------------------
