--- a/source/sass/blocks/about-company.scss
+++ b/source/sass/blocks/about-company.scss
@@ -2,7 +2,7 @@
   background-color: $color-alice-blue2;
 
   @media (min-width: $tablet-width) {
-    background-image: url(../../img/img-2022.png);
+    background-image: url("../../img/img-2022.png");
     background-repeat: no-repeat;
     background-position-x: 4%;
   }
@@ -26,7 +26,7 @@
   }
 }
 
-.about-company__title {
+.about-company h2 {
   margin: 0;
   margin-bottom: 15px;
   font-family: "Roboto Condensed", "Arial", sans-serif;
@@ -47,7 +47,7 @@
   }
 }
 
-.about-company__description {
+.about-company p {
   margin: 0;
   font-family: "PT Mono", "Courier", monospace;
   font-weight: 400;
@@ -55,10 +55,10 @@
   line-height: 1.3;
   color: $color-black-pearl1;
   margin-bottom: 20px;
+}
 
-  &--hidden {
-    display: none;
-  }
+.about-company__wrapper.is-hidden {
+  display: none;
 }
 
 .about-company__button {
