--- a/source/sass/blocks/advantages.scss
+++ b/source/sass/blocks/advantages.scss
@@ -18,7 +18,6 @@
 
 .advantages__list {
   list-style: none;
-  margin: 0;
   margin: 0 auto;
   padding: 0;
   display: flex;
@@ -72,7 +71,7 @@
   margin-bottom: 20px;
 }
 
-.advantages__item-title {
+.advantages__item h3 {
   margin: 0;
   margin-bottom: 15px;
   font-family: "Roboto Condensed", "Arial", sans-serif;
@@ -93,7 +92,7 @@
   }
 }
 
-.advantages__description {
+.advantages__item p {
   margin: 0;
   font-family: "PT Mono", "Courier", monospace;
   font-weight: 400;
