--- a/source/sass/blocks/advantages.scss
+++ b/source/sass/blocks/advantages.scss
@@ -3,16 +3,17 @@
 }
 
 .advantages .container {
-  @media (min-width: $mobile-width-only) {
-    padding: 50px 0;
+  padding-top: 122px;
+  padding-bottom: 103px;
+
+  @media (max-width: $vp-1023) {
+    padding-top: 80px;
+    padding-bottom: 75px;
   }
 
-  @media (min-width: $tablet-width) {
-    padding-bottom: 80px 0;
-  }
-
-  @media (min-width: $desktop-width) {
-    padding: 120px 0;
+  @media (max-width: $vp-767) {
+    padding-top: 50px;
+    padding-bottom: 44px;
   }
 }
 
@@ -20,39 +21,37 @@
   list-style: none;
   margin: 0 auto;
   padding: 0;
-  display: flex;
-  flex-wrap: wrap;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(2, 1fr);
+  gap: 30px 32px;
+
+  @media (max-width: 1023px) {
+    gap: 30px 29px;
+    padding: 0;
+  }
+
+  @media (max-width: 767px) {
+    grid-template-columns: none;
+    row-gap: 25px;
+  }
 }
 
 .advantages__item {
   position: relative;
-  margin-right: 30px;
-  margin-bottom: 30px;
   border: 1px solid $color-whisper;
-  border-left: 5px solid $color-deepsky-blue1;
   box-sizing: border-box;
+  padding: 37px 45px 35px;
+  min-height: 300px;
 
-  &:nth-child(2n) {
-    margin-right: 0;
-  }
-
-  @media (min-width: $mobile-width-only) and (max-width: 769px) {
-    width: 100%;
-    min-height: 325px;
-    padding: 30px 30px 35px;
-    margin-right: 0;
-  }
-
-  @media (min-width: $tablet-width) {
-    width: 46%;
+  @media (max-width: $vp-1023) {
+    padding: 39px 30px 28px 44px;
     min-height: 360px;
-    padding: 40px 34px 35px;
   }
 
-  @media (min-width: $desktop-width) {
-    width: 48%;
-    min-height: 300px;
-    padding: 40px 44px 35px;
+  @media (max-width: $vp-767) {
+    padding: 31px 29px 62px;
+    min-height: 320px;
   }
 
   &:hover,
@@ -64,51 +63,91 @@
     border-color: $color-deepsky-blue1;
     fill: $color-alice-blue3;
   }
+
+  &::before {
+    position: absolute;
+    content: "";
+    height: 100.7%;
+    width: 5px;
+    top: -1px;
+    left: -1px;
+    background-color: $color-deepsky-blue1;
+  }
 }
+
+// .advantages__content {
+//   padding: 39px 25px 34px 45px;
+
+//   @media (max-width: $vp-1023) {
+//     padding: 39px 41px 33px 44px;
+//   }
+
+//   @media (max-width: $vp-767) {
+//     min-height: 245px;
+//     padding: 29px 25px 61px;
+//   }
+// }
 
 .advantages__icon {
   fill: $color-deepsky-blue1;
-  margin-bottom: 20px;
+  margin-bottom: 18px;
+  width: 35px;
+  height: 35px;
+
+  @media (max-width: $vp-1023) {
+    margin-bottom: 12px;
+  }
+
+  @media (max-width: $vp-767) {
+    width: 30px;
+    height: 30px;
+  }
+}
+
+.advantages__item:last-of-type .advantages__icon {
+  @media (max-width: $vp-1023) {
+    margin-bottom: 6px;
+  }
+
+  @media (max-width: $vp-767) {
+    margin-bottom: 11px;
+  }
 }
 
 .advantages__item h3 {
   margin: 0;
-  margin-bottom: 15px;
-  font-family: "Roboto Condensed", "Arial", sans-serif;
+  margin-bottom: 14px;
+  font-family: $ff-roboto;
   font-weight: 400;
   line-height: 1.4;
   color: $color-deepsky-blue1;
+  font-size: 24px;
 
-  @media (min-width: $mobile-width-only) {
+  @media (max-width: $vp-1023) {
+    margin-bottom: 7px;
+  }
+
+  @media (max-width: $vp-767) {
     font-size: 20px;
   }
+}
 
-  @media (min-width: $tablet-width) {
-    font-size: 24px;
-  }
-
-  @media (min-width: $desktop-width) {
-    font-size: 24px;
+.advantages__item:last-of-type h3 {
+  @media (max-width: $vp-767) {
+    margin-bottom: 14px;
   }
 }
 
 .advantages__item p {
   margin: 0;
-  font-family: "PT Mono", "Courier", monospace;
+  font-family: $ff-ptmono;
   font-weight: 400;
   line-height: 1.35;
   color: $color-black-pearl1;
+  font-size: 16px;
+  min-height: 120px;
 
-  @media (min-width: $mobile-width-only) {
+  @media (max-width: $vp-767) {
     font-size: 14px;
-  }
-
-  @media (min-width: $tablet-width) {
-    font-size: 16px;
-  }
-
-  @media (min-width: $desktop-width) {
-    font-size: 16px;
-    min-height: 120px;
   }
 }
