--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -6,56 +6,54 @@
 
 .footer .container {
   display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  padding-top: 50px;
+  padding-bottom: 42px;
 
-  @media (min-width: $mobile-width-only) and (max-width: 769px) {
-    max-width: 100%;
-  }
-
-  @media (min-width: $mobile-width-only) {
+  @media (max-width: $vp-1023) {
+    padding-bottom: 54px;
     flex-direction: column;
-    padding-top: 35px;
-    padding-bottom: 35px;
   }
 
-  @media (min-width: $tablet-width) {
-    flex-direction: row;
-    flex-wrap: wrap;
-    padding-top: 50px;
-    padding-bottom: 65px;
+  @media (max-width: $vp-767) {
+    max-width: 100%;
+    padding: 35px 0;
+  }
+}
+
+.footer__menu {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+
+  @media (max-width: $vp-1190) {
+    justify-content: flex-end;
+  }
+
+  @media (max-width: $vp-1023) {
     justify-content: space-between;
   }
 
-  @media (min-width: $desktop-width) {
-    padding-bottom: 55px;
+  @media (max-width: $vp-767) {
+    flex-direction: column;
   }
 }
 
-.footer__wrapper {
-  @media (min-width: $mobile-width-only) and (max-width: 769px) {
-    border-bottom: 1px solid rgba(248, 253, 255, 0.7);
-    padding: 20px 25px;
-  }
-}
-
-.footer__wrapper-title {
+.footer h3 {
   margin: 0;
-  font-family: "Roboto Condensed", "Arial", sans-serif;
+  margin-bottom: 24px;
+  font-family: $ff-roboto;
   font-weight: 400;
   font-size: 15px;
   line-height: 1.07;
   letter-spacing: 0.05em;
   text-transform: uppercase;
   color: $color-default-white;
+  padding-top: 7px;
 
-  @media (min-width: $mobile-width-only) {
-    margin-bottom: 15px;
-  }
-
-  @media (min-width: $tablet-width) {
-    margin-bottom: 20px;
-  }
-
-  @media (min-width: $desktop-width) {
-    padding-top: 5px;
+  @media (max-width: $vp-767) {
+    padding: 21px 25px;
+    margin: 0;
   }
 }
