--- a/source/sass/blocks/nav.scss
+++ b/source/sass/blocks/nav.scss
@@ -1,6 +1,23 @@
 .nav {
-  @media (min-width: $desktop-width) {
-    min-width: 500px;
+  min-width: 500px;
+  padding-right: 95px;
+
+  @media (max-width: $vp-1190) {
+    min-width: 250px;
+    padding-right: 75px;
+  }
+
+  @media (max-width: $vp-1023) {
+    min-width: 0;
+    margin: 0;
+    padding: 0;
+  }
+
+  @media (max-width: $vp-767) {
+    min-width: 0;
+    margin: 0;
+    padding: 0;
+    border-bottom: 1px solid $color-alice-blue-opacity;
   }
 }
 
@@ -12,27 +29,41 @@
   flex-direction: column;
   flex-wrap: wrap;
 
-  @media (min-width: $desktop-width) {
-    max-height: 190px;
+  @media (min-width: $vp-1024) {
+    max-height: 158px;
+  }
+
+  @media (max-width: $vp-1190) {
+    max-height: 100%;
+  }
+
+  @media (max-width: $vp-767) {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    width: 100%;
+    padding: 0 25px;
   }
 }
 
 .nav__item {
-  @media (min-width: $mobile-width-only) {
-    margin-bottom: 10px;
-  }
+  max-width: 220px;
+  margin-bottom: 8px;
+  margin-right: 30px;
 
-  @media (min-width: $tablet-width) {
-    max-width: 220px;
-    margin-bottom: 20px;
-    margin-right: 30px;
+  @media (max-width: $vp-767) {
+    margin-bottom: 12px;
   }
 }
 
 .nav__link {
-  font-family: "PT Mono", "Courier", monospace;
+  font-family: $ff-ptmono;
   font-weight: 400;
   font-size: 16px;
   line-height: 1.35;
   color: rgba(255, 255, 255, 0.7);
+
+  @include hover-focus {
+    opacity: 0.8;
+  }
 }
