--- a/source/sass/global/variables.scss
+++ b/source/sass/global/variables.scss
@@ -1,10 +1,3 @@
-// Screen sizes
-// ---------------------------------
-
-$desktop-width: 1920px;
-$tablet-width: 770px;
-$mobile-width-only: 320px;
-
 // Colors
 // ---------------------------------
 
@@ -15,7 +8,6 @@ $color-default-white:               #ffffff;
 $color-transparent:                 rgba(255, 255, 255, 0);
 
 // Project palette
-// для нейминга цветов используем https://www.htmlcsscolor.com/hex/334482
 
 $color-black-pearl1:                #041827;
 $color-black-pearl2:                #041427;
@@ -27,49 +19,34 @@ $color-alice-blue3:                 #f2f5f7;
 $color-whisper:                     #ebebeb;
 $color-whisper2:                    #e5e5e5;
 $color-black-pearl-opacity:         fade-out($color-black-pearl1, 0.5);
+$color-black-pearl-opacity2:        fade-out($color-black-pearl2, 0.85);
+$color-alice-blue-opacity:          fade-out($color-alice-blue2, 0.3);
 
 
 // Gradient
 
 $black-to-bottom:                    linear-gradient(180deg, #041827 84.9%, rgba(4, 24, 39, 0) 100%);
 $gradient-intro:                     linear-gradient(180deg, rgba(25, 32, 36, 0.7) 71.72%, rgba(25, 32, 36, 0) 100%);
+$gradient-feedback:                  linear-gradient(319.2deg, $color-transparent, $color-transparent 66.4%, $color-black-pearl-opacity calc(66.4% + 1px), $color-black-pearl-opacity 100%);
 
 // Typography
 // ---------------------------------
 
-// переменная используемая в html для подключения скейлинга
-$fz-default:                        16px;
+$ff-roboto:                    "Roboto Condensed", "Arial", sans-serif;
+$ff-ptmono:                    "PT Mono", "Courier", monospace;
 
-// у некоторых шрифтов в ios возникают проблемы с символом рубля
-// https://www.artlebedev.ru/kovodstvo/sections/159/#13
-$ff-rouble:                         "Rouble", "Arial", sans-serif;
-
-$ff-placeholder:                    "Placeholder", "Arial", sans-serif;
-
-// Animation
-// ---------------------------------
-
-$tf-default:                        ease;
-$trans-default:                     0.3s $tf-default;
-
-// если требуется изинг отличный от $tf-default, то переменную называем не цифрой
-$trans-modal:                       0.6s cubic-bezier(0.55, 0, 0.1, 1);
-
-$trans-600:                         0.6s $tf-default;
 
 // Viewports
 // ---------------------------------
 
-$vp-320:                            320px;
-$vp-375:                            375px;
+$vp-767:                            767px;
 $vp-768:                            768px;
+$vp-1023:                           1023px;
 $vp-1024:                           1024px;
-$vp-1280:                           1280px;
-$vp-1440:                           1440px;
-$vp-1920:                           1920px;
+$vp-1190:                           1190px;
+$vp-1240:                           1240px;
 
 // Retina
 // ---------------------------------
 
-$retina-dpi:                        144dpi;
-$retina-dppx:                       1.5dppx;
+$retina-dppx:                       2dppx;
